# GOWIN_FPGA_DDS_SPI_ESP32_DEMO

./: CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old
FPGA/: AD-DA.gprj
FPGA/impl/: AD-DA_process_config.json
FPGA/impl/gwsynthesis/: AD-DA.prj  AD-DA.vg  AD-DA_syn.rpt.html  AD-DA_syn_resource.html  AD-DA_syn_rsc.xml
FPGA/impl/gwsynthesis/RTL_GAO/: gw_gao_top.v
FPGA/impl/gwsynthesis/RTL_GAO/ao_0/: gw_ao_parameter.v
FPGA/impl/pnr/: AD-DA.binx  AD-DA.db  AD-DA.fs  AD-DA.pin.html  AD-DA.power.html  AD-DA.rpt.html  AD-DA.rpt.txt  AD-DA.timing_paths  AD-DA.tr.html  AD-DA_tr_cata.html  AD-DA_tr_content.html  ao_0.binx  ao_0.fs  cmd.do
FPGA/impl/temp/: rtl_parser.result  rtl_parser_arg.json
FPGA/src/: AD-DA.cst  AD-DA.rao  AD-DA.sdc  top.v
FPGA/src/clk/clock_divider/: clock_divider.v
FPGA/src/clk/gowin_rpll/: gowin_rpll.ipc  gowin_rpll.mod  gowin_rpll.v  gowin_rpll_tmp.v
FPGA/src/dds/: dac8830.v  dds.ipc  dds.v  dds.vo  dds_tmp.v
FPGA/src/dds/integer_multiplier/: integer_multiplier.ipc  integer_multiplier.v  integer_multiplier.vo  integer_multiplier_tmp.v
FPGA/src/fifo_top/: fifo_top.ipc  fifo_top.vo
FPGA/src/spi_mode0_master/: spi_mode0_master.v
FPGA/src/spi_mode0_slave/: spi_slave.v
main/: CMakeLists.txt  main.c
main/hardware/MultiButton/: multi_button.h
main/hardware/dds/: dds.c  dds.h
main/hardware/mcu_to_fpga_spi/: crc.h  mcu_to_fpga_spi.c  mcu_to_fpga_spi.h
main/hardware/mux/: mux.c  mux.h
main/hardware/pga113/: pga113.c  pga113.h
main/system_misc_task/: system_misc_task.c  system_misc_task.h
(+7 files in other folders)
